--- a/ProjectIndividual.UI/ProjectIndividual.UI.csproj
+++ b/ProjectIndividual.UI/ProjectIndividual.UI.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -61,6 +62,9 @@
     <Compile Include="CustomControls\StatementControl.xaml.cs">
       <DependentUpon>StatementControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="ViewModels\GridViewModel.cs" />
+    <Compile Include="ViewModels\RulesSetViewModel.cs" />
     <Compile Include="Views\RuleWindow.xaml.cs">
       <DependentUpon>RuleWindow.xaml</DependentUpon>
     </Compile>
@@ -119,7 +123,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Themes\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjectIndividual.Domain\ProjectIndividual.Domain.csproj">
