--- a/ProjectIndividual.UI/ProjectIndividual.UI.csproj
+++ b/ProjectIndividual.UI/ProjectIndividual.UI.csproj
@@ -62,6 +62,8 @@
     <Compile Include="CustomControls\StatementControl.xaml.cs">
       <DependentUpon>StatementControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\EditableImage.cs" />
+    <Compile Include="Helpers\RgbPixel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModels\GridViewModel.cs" />
     <Compile Include="ViewModels\RulesSetViewModel.cs" />
