--- a/ProjectIndividual.UI/ProjectIndividual.UI.csproj
+++ b/ProjectIndividual.UI/ProjectIndividual.UI.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Helpers\EditableImage.cs" />
     <Compile Include="Helpers\RgbPixel.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="ViewModels\CellOutStateViewModel.cs" />
+    <Compile Include="ViewModels\CellSeekStateViewModel.cs" />
     <Compile Include="ViewModels\CellViewModel.cs" />
     <Compile Include="ViewModels\GridViewModel.cs" />
     <Compile Include="ViewModels\RulesSetViewModel.cs" />
